# masterthesis

./: .gitignore  .gitmodules  README.md
flask-thesis/: database.py  main.py
flask-thesis/templates/: packers.html
src/: Dockerfile  PE-bear  csv_dump_v2.py  detector.py  die.py  malware.py  manalyze.py  peid.py  peid_detector.py
src/database/: AutomateEXEInfoPE.py  AutomateNauz.py  AutomatePEiD.py  AutomateRDG.py  AutomateVolkolak.py  Database.py  nauz_detector.py
src/detector/: Database.py  Dockerfile  README.md  detector.py  install.sh  malware.py  newDetector.py  newDie.py  newManalyze.py  newPeid.py
src/die/: die.py
src/dumps/: 2020.01.13-14.25.csv  2020.02.19-16.46.csv  2020.02.19-17.00.csv  2020.02.19-17.59.csv  2020.02.19-18.02.csv  2_20190615_6000.csv  README.md
src/feature_extractor/: Dockerfile  README  addFeatures.py  build.sh  docker_to_db.py  run_pepac.sh  run_pepac_tests.sh  thomas_build.sh
src/feature_extractor/src/: CMakeCache.txt  CMakeLists.txt  ComposedClassifier.py  Makefile  checkers.py  cmake_install.cmake  pefeats.cpp  pepac.py
src/machine_learning/: Boolean.ipynb  DL8.5 (Schauss).ipynb  Decision Trees.ipynb  Ensembles of Decision Trees.ipynb  Features.ipynb  Final.ipynb  K-Nearest Neighbors.ipynb  KNeighbors.py  Linear Models.ipynb  LinearModels.py  Naive Bayes Classifiers.ipynb  Neural Networks.ipynb  SVM.ipynb  SVM.py  decision_tree.txt  first_learning.ipynb  heavy_code.py  toBoolean.py  utils.py
src/scripts/: clean.py  csv_dump.py  csv_dump_v2.py  generate_csv_time.sh  generate_variations.sh  not_cisco.py  query  stats.py  (+6 more)
(+555 files in other folders)
